[project]
name = "debugging-q4"
version = "0.1.0"
description = "CCHC Assessment Debugging Q4"
authors = [{ name = "Richard McDowell", email = "ricky7mcdowell@outlook.com" }]
readme = "README.md"
requires-python = "<=3.11"
dependencies = [
    "dash>=2.13.1",
    "numpy>=1.26.0",
    "pandas>=2.0.0"
]
